Minor Paper changes relating to turn of phrase. Last commit for May - Paul

--- a/documents/Latex/main.tex
+++ b/documents/Latex/main.tex
@@ -11,7 +11,7 @@
 \title{Open Source Software Framework for Indoor Geolocation Using 802.11 Protocol}
 
 \date{April 2018}
-\usepackage[backend=bibtex,style=numeric]{biblatex}
+\usepackage[backend=bibtex,style=numeric,sorting=none]{biblatex}
 \bibliography{main.bib} 
 \begin{document}
 \author[1]{Paul Bryden\thanks{Paul.Bryden.2014@uni.strath.ac.uk}}
@@ -52,10 +52,10 @@ A diagram of the complete software framework is shown in Figure 1.
     \includegraphics[width=9 cm,height=5.5 cm]{System_Diagram.jpg}
     \caption{Software Framework Architecture Overview}
     \end{figure}
-The RESTful API is the fundamental interface between all components of the software framework. In terms of data flow, the web services provide the relative coordinates of known access points to the sensor node, and the node responds with the relative X, Y, Z coordinates (m) of its own derived location. The web services then translate these coordinates into absolute latitude, longitude, and altitude which are consumed by a mobile application.
+The RESTful API is the fundamental interface between all components of the software framework. In terms of data flow, the Web Services provide the relative coordinates of known access points to the sensor node, and the node responds with the relative X, Y, Z coordinates (m) of its own derived location. The Web Services then translate these coordinates into absolute latitude, longitude, and altitude which are consumed by a mobile application.
 The 3 respective layers and their operation will now be discussed in detail.
 \subsection{Embedded Layer}
-The embedded layer is the component of the software framework which runs on a sensory device operated or worn by a user. The embedded layer was written in C++ using C++11 design principles and is portable across Linux, Windows, iOS, Android, and other platforms. This portability is possible thanks to the use of modern OOP design principles and the employment of cross-platform libraries as BOOST and CPPRestSDK, which removes platform awareness for the majority of the system. As one can see from Figure 2, the only part of the system that requires awareness of the underlying OS/Platform is the Node Scanner Module. A Node in the framework is defined as an 802.11 Access Point. Direct OS interaction is required at this layer due to the low level of access required to the wireless hardware.
+The embedded layer is the component of the software framework which runs on a sensory device operated or worn by a user. The embedded layer was written in C++ using design principles and is portable across Linux, Windows, iOS, Android, and other platforms. This portability is possible thanks to the use of modern OOP design principles and the employment of cross-platform libraries as BOOST and CPPRestSDK, which removes platform awareness for the majority of the system. As one can see from Figure 2, the only part of the system that requires awareness of the underlying OS/Platform is the Node Scanner Module. A Node in the framework is defined as an 802.11 Access Point. Direct OS interaction is required at this layer due to the low level of access required to the wireless hardware.
 BOOST is used mainly to enable straightforward, cross-platform, thread safety and thread handling and the CPPRestSDK are used to handle JSON construction and parsing along with HTTP Requests.
 \begin{figure}[H]
     \includegraphics[width=9 cm,height=3.5 cm]{Pink_Panther_Architecture.jpg}
@@ -81,10 +81,10 @@ The Location Derivation Module is responsible for deriving the exact X,Y and Z c
 \newline
 REST Module:
 \newline
-The REST Module is responsible for posting the data from the Location Derivation Module to the web services. It is also responsible for providing the data to any interested party through a GET route.
+The REST Module is responsible for posting the data from the Location Derivation Module to the Web Services. It is also responsible for providing the data to any interested party through a GET route.
 \newline
 \subsubsection{Theory of Trilateration}
-In order to derive the relative location of a particular sensor node, trilateration techniques will be employed. The theory and derivation of the particular techniques employed will be discussed and the effectiveness of the solution documented. Fundamentally, the ability to derive the location of the sensor node comes from the ability to measure  the  Received  Signal  Strength (RSS) of  several  different  Wi-Fi  access  points (APs)  within  32m  of  the  user.    Typically,  the  received  signal  power  within  one  meter  of  an  AP  will  be  approximately  -32  dBm,  and  close  to  -90  dBm  at  a  distance  of  32m. The RSS can be  modeled using  equation  (1)  
+In order to derive the relative location of a particular sensor node, trilateration techniques will be employed. The theory of the particular techniques employed will be discussed and the effectiveness of the solution documented. Fundamentally, the ability to derive the location of the sensor node comes from the ability to measure  the  Received  Signal  Strength (RSS) of  several  different  WiFi  access  points (APs)  within  32m  of  the  user.    Typically,  the  received  signal  power  within  one  meter  of  an  AP  will  be  approximately  -32  dBm,  and  close  to  -90  dBm  at  a  distance  of  32m. The RSS can be  modeled using  equation  (1)  
 \begin{equation}
 RSS = 10N*\log_{10}D-A  
 \end{equation}
@@ -158,7 +158,7 @@ Since A is constant, the system of equations can also be solved by simply using 
 However, multipath  effects,  co-channel  interference  (CCI), and  adjacent-channel  interference can  affect  the  SNR,  resulting  in  location  measurement  error. In an attempt to mediate the error introduced by such environmental effects, Kalman Filtering will be employed.
 \newline
 \subsubsection{Theory of Extended Kalman Filter}
-RSS (Received Signal Strength) value depends directly, and only, on the distance between the 802.11 Wi-Fi transmitter and the receiver – in an ideal system. In reality, however, multipath interference, Electromagnetic interference and signal fading all play a significant role in causing fluctuations in the Received Signal Strength. As such, it is required that the RSS values are filtered in the time domain such as to mitigate the effect of such noise. One such method is through the use of an extended Kalman Filter. The equations representing the implemented Kalman filter can be seen below and are executed on each "tick" of the system.
+RSS (Received Signal Strength) value depends directly, and only, on the distance between the 802.11 WiFi transmitter and the receiver – in an ideal system. In reality, however, multipath interference, Electromagnetic interference and signal fading all play a significant role in causing fluctuations in the Received Signal Strength. As such, it is required that the RSS values are filtered in the time domain such as to mitigate the effect of such noise. One such method is through the use of an extended Kalman Filter. The equations representing the implemented Kalman filter can be seen below and are executed on each "tick" of the system \cite{KalmanFilter}.
 \begin{equation}
 p = p + q
 \end{equation}
@@ -198,7 +198,7 @@ There are 4 key modules which make up this system:
 \newline
 The Location Module Class - This module is responsible for deriving the exact location of the user based on the 4 nodes with the best signal strength in the target node container. In this open source framework, the LAPACK mathematical library is used to solve the systems of equations. 3 different methodologies for location derivation are employed; DGESV and DGELS for least squares approximation and DGETRS for back substitution.
 \newline
-The Rest Module Class - This module is responsible for providing the location, scan and target node list data to any interested parties by hosting the JSON on a GET Route. The module is also responsible for POSTing the derived location data to the remote web services server.
+The Rest Module Class - This module is responsible for providing the location, scan and target node list data to any interested parties by hosting the JSON on a GET Route. The module is also responsible for POSTing the derived location data to the remote Web Services server.
 \newline
 The Scan Module Class - This module is responsible for populating a list of nodes with the RSSI evident at the Beaglebone for each Access Point. This list can then be used to update the target nodes.
 \newline
@@ -214,18 +214,18 @@ The Middleware comprises of 2 main components:\newline
 The RESTful Web Services and the Back-end database. The Restful Web Services provide the API which both the Mobile Application and the Embedded Layer interact with. The Back End Database is where all location data related to known Access Points and User location is contained/amended. It is only interfaced with through the RESTful Web Services.
 \newline
 \subsubsection{RESTful Web Services}
-The RESTful (Representational State Transfer) style web services were built using the JAVA Glassfish library and framework. The services basically provide an interface to the data contained within the database - as well as a way to write derived location data to the database. 2 GET Routes were provided:\newline
+The RESTful (Representational State Transfer) style Web Services were built using the JAVA Glassfish library and framework. These services  provide an interface to the data contained within the database - as well as a way to write derived location data to the database. 2 GET Routes were provided:\newline
 1) A route which lists the known access points for a location in JSON format \newline
 2) A route which lists the user's exact location (longitude, latitude, and altitude).
 \newline
 There is also 1 HTTP POST route which takes in x, y, z co-ordinates and a site number (in JSON format) derived by the embedded layer and writes the corresponding Latitude, Longitude, and Altitude into the PostgreSQL database.
 \newline
 \subsubsection{Back end Database}
-PostgreSQL is the back end database where all the values that are pulled by the web-services including the exact location of the person are stored securely. The database consists of several tables including one pertaining information on known access point location and a moving window table containing last known location of the sensor nodes. The location of access points for Montezuma Hall and the engineering building and the student union 2nd floor can be determined by using AutoCAD.In order to obtain coordinates of each access points a common origin was placed in the southwest corner of each building, then the correct latitude and longitude of each access point were obtained by offsetting the latitude and longitude of the origin. Cartesian coordinates relative to the corner of the location are stored in the database.
+PostgreSQL is the back end database where all the values that are pulled by the web-services including the exact location of the person are stored securely. The database consists of several tables including one pertaining information on known access point location and a moving window table containing last known location of the sensor nodes. In order to obtain the relative coordinates of each access point a common origin was placed in the southwest corner of each building, then the correct latitude and longitude of each access point were obtained by offsetting the latitude and longitude of the origin. Cartesian coordinates (m) of each AP relative to the corner of the building were stored in the database.
 \newline
 
 \section{Mobile Android Application}
- The Mobile Android Application was developed as a proof of concept to show the power of the developed system. The application simply GETs the relevant Long/Lat coordinates from the web services and renders them as a point using the Google Maps API. In addition, the architectural plans for the building being targeted are also rendered on the Google Map to enable individual rooms to be easily identified. The application was published on the App Store and it is possible for multiple individuals on different Android devices to utilize the application simultaneously. The application can be seen in Figure 4.
+ The Mobile Android Application was developed as a proof of concept to show the power of the developed system. The application simply GETs the relevant Long/Lat coordinates from the Web Services and renders them as a point using the Google Maps API. In addition, the architectural plans for the building being targeted are also rendered on the Google Map to enable individual rooms to be easily identified. The application was published on the App Store and it is possible for multiple individuals on different Android devices to utilize the application simultaneously. The application can be seen in Figure 4.
 \begin{figure}[H]
     \includegraphics[width=8cm,height=5cm]{2018-05-10-PHOTO-00000078.png}
     \caption{Mobile Android Application Using Google Maps API}
@@ -251,37 +251,36 @@ The Kalman Filter, and it's performance, was evaluated by stationing the test pl
     \caption{Kalman Results}
     \end{figure}
 \subsubsection{LAPACK Results}
-As was mentioned previously in the implementation section, 3 methods were utilized for solving the system of equations. DGELS solves an over or underdetermined system using QR or LQ factorization of A. DGESV, solves an over or underdetermined system through partial pivoting and row interchanges to factorize A. The factored form of A, is then used to solve the system of equations. DGETRS simply solves the system of equations, given the LU factorization of A. Since A is essentially a constant, as the AP locations in a location do not change, Once the LU factorization of A is computed, DGETRS can simply be used to solve the system of equations. This should theoretically be far less computationally expensive. In order to evaluate the relative "costs" of each of these methods, the time taken for each of these methods to solve the system was measured. The results can be seen below:\newline
+As was mentioned previously in the implementation section, 3 methods were utilized for solving the system of equations. DGELS solves an over or underdetermined system using QR or LQ factorization of A. DGESV, solves an over or underdetermined system through partial pivoting and row interchanges to factorize A. The factored form of A, is then used to solve the system of equations. DGETRS simply solves the system of equations, given the LU factorization of A. Since A is essentially a constant, as the AP locations in a facility do not change,the LU factorization of A can be  computed a single time thus enabling DGETRS to be employed to solve the system of equations. This, in theory, should be far less computationally expensive. In order to evaluate the relative "costs" of each of these methods, the time taken for each of these methods to solve the system was measured. The results can be seen below:\newline
 18000 ns DGELS\newline
 10000 ns DGESV\newline
 6000 ns DGETRS\newline
-As one can see, DGETRS is almost a 3 times cheaper computation that DGELS and as such, if this system were to be synthesized for hardware or low-level system software it would be of benefit to utilize DGETRS instead of DGELS or DGESV wherever possible. However, it is worth noting that at least one call to DGESV will be required to derive the factorized A component.
+As one can see, DGETRS is almost three times cheaper than DGELS and as such, if this system were to be synthesized for hardware or low-level system software it would be of benefit to utilize DGETRS instead of DGELS or DGESV wherever possible. However, it is worth noting that at least one call to DGESV will be required to derive the factorized A component.
 \subsubsection{Location Results}
-The system was tested in a relatively "noisy" engineering environment with electromagnetic interference and large multipath losses. The 3rd floor of the SDSU Engineering Building was the chosen environment. The test platform was found to have a scan refresh rate of around 2 Hz. There was also a settle time of ~ 10 seconds for the Kalman Filter. However, an error of approximately 3m was evident in areas of good wireless coverage (Less than 10m to each AP) such as in Figure 7.
+The system was tested in a relatively "noisy" engineering environment with electromagnetic interference and large multipath losses. The third floor of the SDSU Engineering Building was the chosen environment. The test platform was found to have a scan refresh rate of around 2 Hz. There was also a settle time of ~ 10 seconds for the Kalman Filter. However, an error of approximately 3m was evident in areas of good wireless coverage (Less than 10m to each AP) such as in Figure 7.
 \begin{figure}[H]
     \includegraphics[width=9.0cm,height=6cm]{Geolocation_1.jpeg}
-    \caption{Kalman Results}
+    \caption{Example of Good Coverage}
     \end{figure}
 
 
 In areas of poorer coverage, an error of approximately 10m was present. Poorer coverage is designated as any situation where there it is more than 15m to 2 or more APs or in areas of high interference and/or path loss. (See Figure 8)
 \begin{figure}[H]
     \includegraphics[width=9.0cm,height=6cm]{Geolocation_2.jpeg}
-    \caption{Kalman Results}
+    \caption{Example of Poor Coverage}
     \end{figure}
 
 However, there is a key limitation of the system and that is its inability to differentiate between signal attenuation due to distance and signal attenuation due to obstacle-induced path loss. This means that the system may derive the location of the individual to be in the left corner of the map, outside the building boundaries instead of their actual location as shown in Figure 9.
 \begin{figure}[H]
     \includegraphics[width=9.0cm,height=6cm]{Geolocation_3.jpeg}
-    \caption{Kalman Results}
+    \caption{Example of incorrect location deduction}
     \end{figure}
 
 \section{Further Work}
-As one can see, the developed system is fully capable of deriving the location of a user, given 4 or more known access points within range. However, a number of areas are avenues for future work. Machine Learning is one such area where this system could experience a great improvement. Such a proposal for the application of this technology involves measuring the wireless signal strengths at several "known locations" within a facility. This information could then be used to generate a set of decision trees which would enable the system to more accurately derive its approximate location. Furthermore, the mobile application and Web services developed in this paper are a proof of concept that will need to be expanded to support multiple clients. As was previously mentioned, the advantage of this software framework is that it can be easily compiled and run on several platforms by simply developing platform specific Scan Module implementations. Future work will include implementing several scan modules for such additional platforms as IOS, Android, and Windows.
+As one can see, the developed system is fully capable of deriving the location of a user, assuming that 4 or more known access points are within range. However, a number of areas are avenues for future work. The employment of machine learning technologies could help improve the accuracy of the derived location, for example. One use of this technology could include measuring the wireless signal strengths at several "known locations" within a facility. This information could then be used to generate a set of decision trees which could be employed by the system to enable it to more accurately derive the location. Furthermore, the mobile application and Web services developed in this paper are a proof of concept that will need to be expanded to support multiple clients. As was previously mentioned, the advantage of this software framework is that it can be easily compiled and run on several platforms by simply developing platform specific scan module implementations. Future work will include the implementation of several platform specific modules for iOS, Android, and Windows.
 
 \section{Conclusion}
 
-This paper has successfully outlaid the development of a multiplatform, indoor, Geolocation framework compatible with 802.11 protocol. The system is capable of deriving location to within an accuracy 3m and is also portable across multiple platforms. The complete solution provides an end to end framework for monitoring individuals from a mobile device and the software framework provides huge scope for expansion and future feature implementation. The system employs modern C+11 development principles and as a result is portable, expandable, thread and memory safe. The performance of the system has been profiled and a number of areas of further development have been outlined. As such this project has successfully met the goals of developing an affordable, Open Source Indoor Geolocation framework for tracking the location and movements of individuals. It is hoped that this technology will be employed and used in the future to help reduce the time it takes for individuals in need of care to be located, thus saving lives.
+This paper has successfully out laid the development of a multiplatform, indoor, Geolocation framework compatible with 802.11 protocol. The system is capable of deriving location to within an accuracy 3m and is also portable across multiple platforms. The complete solution provides an end to end framework for monitoring individuals from a mobile device and the software framework provides huge scope for expansion and future feature implementation. The system employs modern C++11 and OOP design principles and as a result is portable, expandable, thread safe and memory safe. The performance of the system has been profiled and a number of areas for further development have been outlined. As such this project has successfully met the goals of developing an affordable, Open Source Indoor Geolocation framework for tracking the location and movements of individuals. It is hoped that this technology will be employed and used in the future to help reduce the time it takes for individuals in need of care to be located, thus saving lives.
 \printbibliography
-
 \end{document}
