--- a/documents/Latex/main.bib
+++ b/documents/Latex/main.bib
@@ -1,5 +1,11 @@
 
 \nocite{*}
+
+@inproceedings{KalmanFilter,
+  title={C++ KalmanFilter Implementation},
+  author={Long Dao},
+  organization={Mbed}
+  }
 @article{hi,
 author = "http://money.cnn.com/2018/01/30/news/economy/health-care-costs-eating-the-economy/index.html" 
 }
@@ -31,3 +37,4 @@ author = "http://money.cnn.com/2018/01/30/news/economy/health-care-costs-eating-
   year={2002},
   publisher={IEEE}
 }
+  
